# zahlungssystem

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  Dockerfile.client  Dockerfile.grpc_server  Dockerfile.payment_service  LOGGING_GUIDE.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  docker-compose.yml  generate_grpc.sh  invoice_pb2_grpc.py  pyproject.toml  requirements.txt
.github/workflows/: test-client-e2e.yml
app/: __main__.py  grpc_server.py  invoice_pb2_grpc.py  main.py  payment_pb2_grpc.py  payment_service.py
app/models/: __init__.py  invoice.py
app/proto/: invoice.proto
app/repository/: __init__.py  invoice_repository.py
app/routers/: __init__.py  invoice_router.py
app/schemas/: __init__.py  invoice.py
app/services/: __init__.py  invoice_service.py
app/utils/: __init__.py  db_helpers.py  logging_config.py  rabbitmq_helpers.py
client/: README.md  test_client.py
config/: __init__.py  database.py
grpc_service/: __main__.py  grpc_server.py
grpc_service/models/: __init__.py  invoice.py
grpc_service/proto/: invoice.proto
legacy/: grpc_client.py  grpc_server.py  invoice_pb2.py  payment_sender.py  payment_service.py
payment_service/: __init__.py  __main__.py  payment_service.py
payment_service/proto/: payment.proto
proto/: invoice.proto
utils/: db_helpers.py  rabbitmq_helpers.py
