[project]
name = "rechnungsbearbeitung"
version = "1.0.0"
description = "gRPC invoice metadata service with RabbitMQ payment processing"
authors = [
    {name = "Student", email = "student@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.1",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "pika>=1.3.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
